--- a/src/assets/lang/en_EN.json
+++ b/src/assets/lang/en_EN.json
@@ -2,6 +2,8 @@
   "greeting": "Hello, World!",
   "welcome": "Welcome to my website",
   "language": "Language",
-  "about": "About Us",
-  "contact": "Contact"
+  "about": "About",
+  "contact": "Contact",
+  "hero": "Hero",
+  "projects": "Projects"
 }
